tests/specs/check/erasable_syntax_only/error.out
Check [WILDCARD]main.ts
TS1294 [ERROR]: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
namespace Test {
          ~~~~
    at file:///[WILDLINE]/main.ts:1:11

error: Type checking failed.
